--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -8,15 +8,16 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "build:css" : "postcss src/styles/index.css -o src/styles/tailwind.css",
-    "watch:css" : "postcss src/styles/index.css -o src/styles/tailwind.css --watch",
-    "react-scripts:start" : "react-scripts start",
-    "start": "run-p watch:css react-scripts:start",    
-    "build": "run-s build:css react-scripts:build",    
+    "build:css": "postcss src/styles/index.css -o src/styles/tailwind.css",
+    "watch:css": "postcss src/styles/index.css -o src/styles/tailwind.css --watch",
+    "react-scripts:start": "react-scripts start",
+    "start": "run-p watch:css react-scripts:start",
+    "build": "run-s build:css react-scripts:build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
